update simple role
