# docs/swagger.json
@@ -169,8 +169,8 @@
                 "summary": "用户登录",
                 "parameters": [
                     {
-                        "description": "用户名",
-                        "name": "username",
+                        "description": "手机号",
+                        "name": "phone",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -293,6 +293,13 @@
                         "type": "number",
                         "description": "页大小",
                         "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "案件号（case id）模糊查询",
+                        "name": "search",
                         "in": "query",
                         "required": true
                     }
@@ -457,6 +464,48 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/vo.Common"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/department/list": {
+            "get": {
+                "description": "获取所有相关单位信息",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "department"
+                ],
+                "summary": "获取所有相关单位信息",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "页大小",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "正常业务处理",
+                        "schema": {
+                            "$ref": "#/definitions/vo.CommonData"
+                        }
+                    },
+                    "401": {
+                        "description": "未验证",
                         "schema": {
                             "$ref": "#/definitions/vo.Common"
                         }
@@ -929,6 +978,10 @@
         "models.Department": {
             "type": "object",
             "properties": {
+                "contact": {
+                    "description": "机构联系方式",
+                    "type": "string"
+                },
                 "created_at": {
                     "description": "创建日期，提交表单时不要上传该信息",
                     "type": "string"
@@ -938,6 +991,7 @@
                     "type": "string"
                 },
                 "description": {
+                    "description": "机构介绍",
                     "type": "string"
                 },
                 "id": {
@@ -945,6 +999,11 @@
                     "type": "integer"
                 },
                 "name": {
+                    "description": "机构、单位名称",
+                    "type": "string"
+                },
+                "service": {
+                    "description": "机构提供的服务",
                     "type": "string"
                 },
                 "updated_at": {
@@ -1618,8 +1677,7 @@
                 "confirm_password",
                 "employer",
                 "password",
-                "phone",
-                "username"
+                "phone"
             ],
             "properties": {
                 "confirm_password": {
@@ -1630,14 +1688,12 @@
                     "$ref": "#/definitions/vo.Employer"
                 },
                 "password": {
+                    "description": "Username        string   `json:\"username\" form:\"username\" binding:\"required,min=3,max=20\"`",
                     "type": "string"
                 },
                 "phone": {
                     "type": "string",
                     "example": "13800138000"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
@@ -1647,8 +1703,7 @@
                 "applicant",
                 "confirm_password",
                 "password",
-                "phone",
-                "username"
+                "phone"
             ],
             "properties": {
                 "applicant": {
@@ -1659,14 +1714,12 @@
                     "type": "string"
                 },
                 "password": {
+                    "description": "Username        string    `json:\"username\" form:\"username\" binding:\"required,min=3,max=20\"`",
                     "type": "string"
                 },
                 "phone": {
                     "type": "string",
                     "example": "13800138000"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
