# security/jwt/handler/handler.go
@@ -6,6 +6,7 @@ import (
 	"RizhaoLanshanLabourUnion/services/respcode"
 	"RizhaoLanshanLabourUnion/services/vo"
 	"RizhaoLanshanLabourUnion/utils"
+	"RizhaoLanshanLabourUnion/utils/captchaid"
 	"errors"
 	jwt "github.com/appleboy/gin-jwt/v2"
 	"github.com/gin-gonic/gin"
@@ -19,7 +20,7 @@ import (
 // @Tags user
 // @Accept json
 // @Produce json
-// @Param username body string true  "用户名"
+// @Param phone body string true  "手机号"
 // @Param password  body string true "密码"
 // @Param captcha_code  body string true "验证码"
 // @Param captcha_time  body string true "验证码时间戳 （2006-01-02 15:04:05）"
@@ -28,20 +29,20 @@ import (
 // @Failure 401 {object} vo.Common
 // @Router /api/auth/login [post]
 func Authenticator(c *gin.Context) (interface{}, error) {
-	var login vo.UsernameLogin
+	var login vo.PhoneLogin
 	if err := c.ShouldBindJSON(&login); err == nil {
 
 		// check captcha
-		//result := utils.CheckCaptcha(captchaid.CAPTCHA_ID_LOGIN,
-		//	login.Captcha,
-		//	login.CaptchaTimestamp,
-		//	login.CaptchaChallenge)
-		//if !result {
-		//	return "", errors.New("captcha is invalid")
-		//}
+		result := utils.CheckCaptcha(captchaid.CAPTCHA_ID_LOGIN,
+			login.Captcha,
+			login.CaptchaTimestamp,
+			login.CaptchaChallenge)
+		if !result {
+			return "", errors.New("验证码无效")
+		}
 
 		// check login
-		user, err := dao.GetUserByUserName(login.Username)
+		user, err := dao.GetUserByPhone(login.Phone)
 		if err != nil {
 			return "", errors.New("用户名或密码错误(1061)")
 		} else {
@@ -51,7 +52,7 @@ func Authenticator(c *gin.Context) (interface{}, error) {
 
 				// check active
 				if !user.Activated {
-					return "", errors.New("用户已锁定（"+string(respcode.UserLocked)+"）")
+					return "", errors.New("用户已锁定（" + string(respcode.UserLocked) + "）")
 				}
 
 				return jwtmodel.PopulateUserToUserClaims(user), nil
@@ -65,21 +66,17 @@ func Authenticator(c *gin.Context) (interface{}, error) {
 	}
 }
 
-
-
-
 func IdentityHandler(context *gin.Context) interface{} {
 	claims := jwt.ExtractClaims(context)
 	return &jwtmodel.UserClaims{
-		Id:    int64(claims[utils.JWTSettings.IdentityKey].(float64)),
-		Sub:   claims["sub"].(string),
-		Roles: claims["roles"].([]interface{}),
-		Iss:   claims["iss"].(string),
-		Realm: claims["realm"].(string),
+		Id:       int64(claims[utils.JWTSettings.IdentityKey].(float64)),
+		Sub:      claims["sub"].(string),
+		Roles:    claims["roles"].([]interface{}),
+		Iss:      claims["iss"].(string),
+		Realm:    claims["realm"].(string),
+		UserType: int(claims["type"].(float64)),
 	}
 }
-
-
 
 func PayloadHandler(data interface{}) jwt.MapClaims {
 
@@ -93,6 +90,7 @@ func PayloadHandler(data interface{}) jwt.MapClaims {
 			"roles":                       userClaims.Roles,
 			"iss":                         userClaims.Iss,
 			"realm":                       userClaims.Realm,
+			"type":                        userClaims.UserType,
 		}
 	} else {
 		log.Println("payload function encountered an exception!")
@@ -100,7 +98,6 @@ func PayloadHandler(data interface{}) jwt.MapClaims {
 	}
 
 }
-
 
 func LoginResponse(context *gin.Context, code int, s string, t time.Time) {
 	context.JSON(code, vo.LoginResult{
@@ -117,3 +114,7 @@ func LoginResponse(context *gin.Context, code int, s string, t time.Time) {
 	})
 }
 
+
+func LogoutResponse(ctx *gin.Context, code int){
+	ctx.JSON(code,vo.GenerateCommonResponseHead(0,"用户已成功退出"))
+}
